--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,5 @@
 <resources>
     <string name="app_name">All In One</string>
-
     <string name="second_text">Jetpack Compose is a modern toolkit for building native Android UI. Compose simplifies and accelerates UI development on Android with less code, powerful tools, and intuitive Kotlin APIs.</string>
     <string name="third_text">In this tutorial, you build a simple UI component with declarative functions. You call Compose functions to say what elements you want and the Compose compiler does the rest. Compose is built around Composable functions. These functions let you define your app\\\'s UI programmatically because they let you describe how it should look and provide data dependencies, rather than focus on the process of the UI\\\'s construction, such as initializing an element and then attaching it to a parent. To create a Composable function, you add the @Composable annotation to the function name.</string>
     <string name="first_title">Text composable</string>
@@ -29,4 +28,34 @@
     <string name="avenue_in_the_rain_author">Childe Hassam</string>
     <string name="star_sky_year">1889</string>
     <string name="avenue_in_the_rain_year">1917</string>
+    <string name="settings">Settings</string>
+    <string name="settingsIcon">Settings icon</string>
+    <string name="help_and_feedback">Help and feedback</string>
+    <string name="task_complete_title">All task completed</string>
+    <string name="task_complete_title2">Nice work!</string>
+    <string name="select_language">Select Language</string>
+    <string name="auto_nigt_mode">Auto-Night Mode</string>
+    <string name="auto_nigt_mode_desc">This mode defines appearance of the application.</string>
+    <string name="language">Language</string>
+    <string name="language_desc">Change app language to appropriate language for you.</string>
+    <string name="search">Search</string>
+    <string name="search_bar_menu_icon">Menu icon in search bar</string>
+    <string name="search_bar_close_icon">Close icon in search bar</string>
+    <string name="search_bar_profile_icon">Profile icon in search bar</string>
+    <string name="search_bar_mic_icon">Microphone icon</string>
+    <string name="search_bar_clear_icon">Clear search</string>
+    <string name="search_history_empty">No search history</string>
+    <string name="search_bar_history_icon">History icon</string>
+    <string name="user_avatar">User avatar</string>
+    <string name="from_lemonade_to_somewhere">navigate up from lemonade page</string>
+    <string name="tip_time">Tip Time</string>
+    <string name="from_tip_calculator_to_somewhere">Navigate up from Tip Calculator screen</string>
+    <string name="disabled">Disabled</string>
+    <string name="disabled_desc">Turn off auto-night mode</string>
+    <string name="scheduled">Scheduled</string>
+    <string name="scheduled_desc">Schedule auto-night mode</string>
+    <string name="adaptive">Adaptive</string>
+    <string name="adaptive_desc">Adaptive auto-night mode</string>
+    <string name="default_desc">System Default auto-night mode.</string>
+    <string name="default_mode">System Default</string>
 </resources>
