added some language translations

--- a/app/src/main/res/values-ru-rRU/strings.xml
+++ b/app/src/main/res/values-ru-rRU/strings.xml
@@ -1,34 +1,43 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="settings">Settings</string>
-    <string name="settingsIcon">Settings icon</string>
-    <string name="help_and_feedback">Help and feedback</string>
+    <string name="settings">Настройки</string>
+    <string name="settingsIcon">Иконка настроек</string>
+    <string name="help_and_feedback">Поддержка и Отзыв</string>
     <string name="task_complete_title">All task completed</string>
     <string name="task_complete_title2">Nice work!</string>
-    <string name="select_language">Select Language</string>
-    <string name="auto_nigt_mode">Auto-Night Mode</string>
-    <string name="auto_nigt_mode_desc">This mode defines appearance of the application.</string>
-    <string name="language">Language</string>
-    <string name="language_desc">Change app language to appropriate language for you.</string>
-    <string name="search">Search</string>
-    <string name="search_bar_menu_icon">Menu icon in search bar</string>
-    <string name="search_bar_close_icon">Close icon in search bar</string>
-    <string name="search_bar_profile_icon">Profile icon in search bar</string>
-    <string name="search_bar_mic_icon">Microphone icon</string>
-    <string name="search_bar_clear_icon">Clear search</string>
-    <string name="search_history_empty">No search history</string>
-    <string name="search_bar_history_icon">History icon</string>
-    <string name="user_avatar">User avatar</string>
-    <string name="from_lemonade_to_somewhere">navigate up from lemonade page</string>
-    <string name="tip_time">Tip Time</string>
-    <string name="from_tip_calculator_to_somewhere">Navigate up from Tip Calculator screen</string>
-    <string name="disabled">Disabled</string>
-    <string name="disabled_desc">Turn off auto-night mode</string>
-    <string name="scheduled">Scheduled</string>
-    <string name="scheduled_desc">Schedule auto-night mode</string>
-    <string name="adaptive">Adaptive</string>
-    <string name="adaptive_desc">Adaptive auto-night mode</string>
-    <string name="default">System Default</string>
-    <string name="default_desc">System Default auto-night mode.</string>
-    <string name="default_mode">System Default</string>
+    <string name="select_language">Выберите язык</string>
+    <string name="auto_nigt_mode">Автоматический ночной режим</string>
+    <string name="auto_nigt_mode_desc">Этот режим определяет внешний вид приложения.</string>
+    <string name="language">Язык</string>
+    <string name="language_desc">Измените язык приложения на удобный для вас.</string>
+    <string name="search">Искать</string>
+    <string name="search_bar_menu_icon">Значок меню в строке поиска</string>
+    <string name="search_bar_close_icon">Значок закрытия в строке поиска</string>
+    <string name="search_bar_profile_icon">Значок профиля в строке поиска</string>
+    <string name="search_bar_mic_icon">Значок микрофона</string>
+    <string name="search_bar_clear_icon">Очистить поиск</string>
+    <string name="search_history_empty">Нет истории поиска</string>
+    <string name="search_bar_history_icon">Значок истории</string>
+    <string name="user_avatar">Аватар пользователя</string>
+    <string name="from_lemonade_to_somewhere">перейти вверх со страницы лимонада</string>
+    <string name="tip_time">Время чаевых</string>
+    <string name="from_tip_calculator_to_somewhere">Перейдите вверх с экрана калькулятора чаевых</string>
+    <string name="disabled">Отключено</string>
+    <string name="disabled_desc">Отключить автоматический ночной режим</string>
+    <string name="scheduled">Запланировано</string>
+    <string name="scheduled_desc">Расписание автоматического ночного режима</string>
+    <string name="adaptive">Адаптивный</string>
+    <string name="adaptive_desc">Адаптивный автоматический ночной режим</string>
+    <string name="default_desc">Системный автоматический ночной режим по умолчанию.</string>
+    <string name="default_mode">Системные настройки по умолчанию</string>
+    <string name="second_text">Jetpack Compose — это современный набор инструментов для создания собственного пользовательского интерфейса Android. Compose упрощает и ускоряет разработку пользовательского интерфейса на Android с меньшим количеством кода, мощными инструментами и интуитивно понятными API Kotlin.</string>
+    <string name="third_text">В этом руководстве вы создадите простой компонент пользовательского интерфейса с декларативными функциями. Вы вызываете функции Compose, чтобы указать, какие элементы вам нужны, а компилятор Compose сделает все остальное. Compose построен вокруг функций Composable. Эти функции позволяют вам программно определять пользовательский интерфейс вашего приложения, поскольку они позволяют вам описывать, как он должен выглядеть, и предоставлять зависимости данных, а не сосредотачиваться на процессе построения пользовательского интерфейса, например, инициализации элемента и его последующем присоединении к родительскому элементу. Чтобы создать функцию Composable, вы добавляете аннотацию @Composable к имени функции.</string>
+    <string name="first_title">Составной текст</string>
+    <string name="first_description">Отображает текст и следует рекомендуемым принципам Material Design.</string>
+    <string name="second_title">Компонуемое изображение</string>
+    <string name="second_description">Создает компонуемый объект, который размещает и рисует заданный объект класса Painter.</string>
+    <string name="third_title">Строка компонуемая</string>
+    <string name="third_description">Компоновочный макет, размещающий дочерние элементы в горизонтальной последовательности.</string>
+    <string name="fourth_title">Компонуемая колонка</string>
+    <string name="fourth_description">Компоновочный макет, размещающий дочерние элементы в вертикальной последовательности.</string>
 </resources>
