--- a/app/src/main/res/values-uz-rUZ/strings.xml
+++ b/app/src/main/res/values-uz-rUZ/strings.xml
@@ -1,34 +1,43 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="settings">Settings</string>
-    <string name="settingsIcon">Settings icon</string>
-    <string name="help_and_feedback">Help and feedback</string>
-    <string name="task_complete_title">All task completed</string>
-    <string name="task_complete_title2">Nice work!</string>
-    <string name="select_language">Select Language</string>
-    <string name="auto_nigt_mode">Auto-Night Mode</string>
-    <string name="auto_nigt_mode_desc">This mode defines appearance of the application.</string>
-    <string name="language">Language</string>
-    <string name="language_desc">Change app language to appropriate language for you.</string>
-    <string name="search">Search</string>
-    <string name="search_bar_menu_icon">Menu icon in search bar</string>
-    <string name="search_bar_close_icon">Close icon in search bar</string>
-    <string name="search_bar_profile_icon">Profile icon in search bar</string>
-    <string name="search_bar_mic_icon">Microphone icon</string>
-    <string name="search_bar_clear_icon">Clear search</string>
-    <string name="search_history_empty">No search history</string>
-    <string name="search_bar_history_icon">History icon</string>
-    <string name="user_avatar">User avatar</string>
-    <string name="from_lemonade_to_somewhere">navigate up from lemonade page</string>
-    <string name="tip_time">Tip Time</string>
-    <string name="from_tip_calculator_to_somewhere">Navigate up from Tip Calculator screen</string>
-    <string name="disabled">Disabled</string>
-    <string name="disabled_desc">Turn off auto-night mode</string>
-    <string name="scheduled">Scheduled</string>
-    <string name="scheduled_desc">Schedule auto-night mode</string>
-    <string name="adaptive">Adaptive</string>
-    <string name="adaptive_desc">Adaptive auto-night mode</string>
-    <string name="default">System Default</string>
-    <string name="default_desc">System Default auto-night mode.</string>
-    <string name="default_mode">System Default</string>
+    <string name="settings">Sozlamalar</string>
+    <string name="settingsIcon">Sozlamalar belgisi</string>
+    <string name="help_and_feedback">Yordam va fikr-mulohaza</string>
+    <string name="task_complete_title">Barcha vazifa bajarildi</string>
+    <string name="task_complete_title2">Yaxshi ish!</string>
+    <string name="select_language">Tilni tanlang</string>
+    <string name="auto_nigt_mode">Avtomatik tungi rejim</string>
+    <string name="auto_nigt_mode_desc">Ushbu rejim ilovaning ko\'rinishini belgilaydi.</string>
+    <string name="language">Til</string>
+    <string name="language_desc">Ilova tilini o\'zingiz uchun mos tilga o\'zgartiring.</string>
+    <string name="search">Qidiruv</string>
+    <string name="search_bar_menu_icon">Qidiruv panelidagi menyu belgisi</string>
+    <string name="search_bar_close_icon">Qidiruv panelidagi belgini yoping</string>
+    <string name="search_bar_profile_icon">Qidiruv panelidagi profil belgisi</string>
+    <string name="search_bar_mic_icon">Mikrofon belgisi</string>
+    <string name="search_bar_clear_icon">Qidiruvni tozalash</string>
+    <string name="search_history_empty">Qidiruv tarixi yo\'q</string>
+    <string name="search_bar_history_icon">Tarix belgisi</string>
+    <string name="user_avatar">Foydalanuvchi rasmi</string>
+    <string name="from_lemonade_to_somewhere">limonad sahifasidan yuqoriga o\'ting</string>
+    <string name="tip_time">Maslahat vaqti</string>
+    <string name="from_tip_calculator_to_somewhere">Maslahat kalkulyatori ekranidan yuqoriga oʻting</string>
+    <string name="disabled">O\'chirilgan</string>
+    <string name="disabled_desc">Avtomatik tungi rejimni o\'chiring</string>
+    <string name="scheduled">Rejalashtirilgan</string>
+    <string name="scheduled_desc">Avtomatik tungi rejimni rejalashtirish</string>
+    <string name="adaptive">Moslashuvchan</string>
+    <string name="adaptive_desc">Moslashuvchan avtomatik tungi rejim</string>
+    <string name="default_desc">Tizimning standart avtomatik tungi rejimi.</string>
+    <string name="default_mode">Tizim standarti</string>
+    <string name="fourth_title">Ustunni tuzish mumkin</string>
+    <string name="fourth_description">Farzandlarini vertikal ketma-ketlikda joylashtiradigan tuzilma.</string>
+    <string name="second_text">Jetpack Compose - bu mahalliy Android UI yaratish uchun zamonaviy asboblar to\'plami. Compose kamroq kod, kuchli vositalar va intuitiv Kotlin API’lari bilan Android’da UI rivojlanishini soddalashtiradi va tezlashtiradi.</string>
+    <string name="third_text">Ushbu qo\'llanmada siz deklarativ funktsiyalarga ega oddiy UI komponentini yaratasiz. Siz kerakli elementlarni aytish uchun Compose funksiyalarini chaqirasiz, qolganini esa Compose kompilyatori bajaradi. Compose Composable funksiyalari atrofida qurilgan. Bu funksiyalar ilovangizning UI ni dasturiy jihatdan aniqlash imkonini beradi, chunki ular elementni ishga tushirish va keyin uni ota-onaga biriktirish kabi foydalanuvchi interfeysini qurish jarayoniga e’tibor qaratish o‘rniga, uning qanday ko‘rinishini tasvirlash va ma’lumotlarga bog‘liqlikni ta’minlash imkonini beradi. Composable funksiyasini yaratish uchun funktsiya nomiga @Composable izohini qo\'shishingiz kerak.</string>
+    <string name="first_title">Matnni tuzish mumkin</string>
+    <string name="first_description">Matnni ko\'rsatadi va tavsiya etilgan Material Design ko\'rsatmalariga amal qiladi.</string>
+    <string name="second_title">Tasvirni tuzish mumkin</string>
+    <string name="second_description">Berilgan Painter sinfi ob\'ektini joylashtiradigan va chizadigan kompozitsiyani yaratadi.</string>
+    <string name="third_title">Qator tuzish mumkin</string>
+    <string name="third_description">Farzandlarini gorizontal ketma-ketlikda joylashtiradigan tuzilma.</string>
 </resources>
