--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -60,4 +60,6 @@
     <string name="default_mode">System Default</string>
     <string name="folder_icon">Folder icon</string>
     <string name="app_version">App Version</string>
+    <string name="battery_saving">Power Saving</string>
+    <string name="from_power_saving_to_somewhere">Navigate up from PowerSaving screen</string>
 </resources>
