--- a/app/src/main/res/values-uz-rUZ/strings.xml
+++ b/app/src/main/res/values-uz-rUZ/strings.xml
@@ -42,4 +42,6 @@
     <string name="third_description">Farzandlarini gorizontal ketma-ketlikda joylashtiradigan tuzilma.</string>
     <string name="folder_icon">Folder icon</string>
     <string name="app_version">App Version</string>
+    <string name="battery_saving">Power Saving</string>
+    <string name="from_power_saving_to_somewhere">Navigate up from PowerSaving screen</string>
 </resources>
