--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -70,4 +70,5 @@
     <string name="power_saving_desc">Automatically reduce power usage and animations when your battery is below 20%.</string>
     <string name="location_permission_required">Location Permission not granted!</string>
     <string name="from_other_sections_to_somewhere">Navigate up from Other Sections screen</string>
+    <string name="adaptive_mode">Adaptive Mode</string>
 </resources>
