modified ui, added icon, added splash screen, implemented business logic getting and updating location in Scheduled section of Auto-Night Mode. package structure optimized, code optimized

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -71,4 +71,5 @@
     <string name="location_permission_required">Location Permission not granted!</string>
     <string name="from_other_sections_to_somewhere">Navigate up from Other Sections screen</string>
     <string name="adaptive_mode">Adaptive Mode</string>
+    <string name="scheduled_switch_on_info_about_location">Calculating sunset and sunrise times requires a one-time check of your approximate location. Note that this location is only stored locally on your device.</string>
 </resources>
