auth manager modified, details screen modified, preview added, profile and edit profile screens also reworked.

--- a/app/src/main/res/values-ru-rRU/strings.xml
+++ b/app/src/main/res/values-ru-rRU/strings.xml
@@ -61,4 +61,8 @@
     <string name="sign_in">Sign in</string>
     <string name="sign_out">Sign out</string>
     <string name="edit_profile">Edit Profile</string>
+    <string name="main_content">Main content</string>
+    <string name="settings_and_help">Settings and Help</string>
+    <string name="take_codelab_btn_text">Start the code lab</string>
+    <string name="details_screen_to_somewhere">Navigate up from details screen</string>
 </resources>
