--- a/app/src/main/res/values-ru-rRU/strings.xml
+++ b/app/src/main/res/values-ru-rRU/strings.xml
@@ -99,4 +99,14 @@
     <string name="device_temperature_desc">Device temperature will be shown in user friendly graph.</string>
     <string name="refresh_temp">Refresh temperature</string>
     <string name="send_feedback">Send Feedback</string>
+    <string name="about_device_temp_desc">The device temperature screen in Android provides users with information about the current temperature of their device\'s hardware components, such as the CPU and battery. This feature helps monitor performance and prevent overheating, which can lead to hardware damage or reduced efficiency. Users can typically access this information through the device\'s settings or diagnostic tools, allowing them to take necessary actions if temperatures exceed safe thresholds.</string>
+    <string name="close">Close</string>
+    <string name="about_device_temp">About device temperature</string>
+    <string name="device_temp_sensors_desc">Device temperature is estimated based on multiple internal sensors</string>
+    <string name="cold">Cold</string>
+    <string name="normal">Normal</string>
+    <string name="hot">Hot</string>
+    <string name="no_temp_sensor_available">No temperature sensor available</string>
+    <string name="device_sensors_info">This device doesn\'t appear to have temperature sensors accessible to applications</string>
+    <string name="note_device_temp_about_sheet_info">Note: That information shown on device temperature screen might not be accurate. There\'s difference could be around 3-5 degrees of C</string>
 </resources>
