--- a/app/src/main/res/values-ru-rRU/strings.xml
+++ b/app/src/main/res/values-ru-rRU/strings.xml
@@ -109,4 +109,6 @@
     <string name="no_temp_sensor_available">No temperature sensor available</string>
     <string name="device_sensors_info">This device doesn\'t appear to have temperature sensors accessible to applications</string>
     <string name="note_device_temp_about_sheet_info">Note: That information shown on device temperature screen might not be accurate. There\'s difference could be around 3-5 degrees of C</string>
+    <string name="device_temperature_to_somewhere">Navigate up from device temperature screen</string>
+    <string name="widget_xml_info">Device temperature widget.</string>
 </resources>
