--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -77,7 +77,7 @@
     <string name="adaptive_mode_to_somewhere">Navigate up from Adaptive Mode screen</string>
     <string name="refresh_icon">Refresh current brightness icon</string>
     <string name="sign_in">Sign in</string>
-    <string name="web_client_id" translatable="false">857053349382-d5rrmu2150m77sms3dqis9sc8eest2pt.apps.googleusercontent.com</string>
+    <string name="web_client_id" translatable="false">10643032597-qkltp0e0a241n6bghk4bcmcn3bihf6ef.apps.googleusercontent.com</string> <!--Old 857053349382-d5rrmu2150m77sms3dqis9sc8eest2pt.apps.googleusercontent.com-->
     <string name="sign_out">Sign out</string>
     <string name="edit_profile">Edit Profile</string>
     <string name="main_content">Main content</string>
@@ -106,7 +106,7 @@
     <string name="about">About</string>
     <string name="years_old">%d years old</string>
     <string name="expand_button_content_description">See more or less information about a dog.</string>
-    <string name="comfirm">Confirm</string>
+    <string name="confirm">Confirm</string>
     <string name="dismiss">Dismiss</string>
     <string name="warning">Warning</string>
     <string name="dialog_txt">If you proceed next with this code lab, you will be navigated to official web page of this code lab.</string>
@@ -129,5 +129,14 @@
     <string name="device_sensors_info">This device doesn\'t appear to have temperature sensors accessible to applications</string>
     <string name="note_device_temp_about_sheet_info">[ATTENTION] Please note that the temperature displayed on the device may not be accurate. There could be a difference of about 3 to 5 degrees Celsius.</string>
     <string name="device_temperature_to_somewhere">Navigate up from device temperature screen</string>
-    <string name="widget_xml_info">Device temperature widget.</string>
+    <string name="widget_xml_info">Realtime monitoring device temperature widget.</string>
+    <string name="logout">Logout</string>
+    <string name="logout_desc">Do you want to logout? \nNote that if you logout all unsaved action will be removed.</string>
+    <string name="forgot_password">Forgot Password ?</string>
+    <string name="password">Password</string>
+    <string name="create_an_account">Create an account</string>
+    <string name="email">Email</string>
+    <string name="save_changes">Save Changes</string>
+    <string name="full_name">Full name</string>
+    <string name="from_profile_to_somewhere">Navigate up from profile screen</string>
 </resources>
