--- a/app/src/main/res/values-ru-rRU/strings.xml
+++ b/app/src/main/res/values-ru-rRU/strings.xml
@@ -125,4 +125,5 @@
     <string name="to">To</string>
     <string name="sign_up">Sign up</string>
     <string name="about_pl_coding">"\"PL Coding\" refers to the IT education company run by Philipp Lackner, which focuses on practical and accessible Android development courses and mentorship. It includes the popular YouTube channel Philipp Lackner and paid offerings like the Mobile Dev Campus, which provides video courses, challenges, and a community for aspiring and current app developers. "</string>
+    <string name="mini_challenges">Mini Challenges</string>
 </resources>
